# CppTownsLife

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Npc/: Npc.cpp  Npc.h
Npc/Races/Elf/: Elf.cpp  Elf.h
Npc/Races/Human/: Human.cpp  Human.h
Npc/Races/Spirit/: Spirit.cpp  Spirit.h
Npc/Races/Undead/: Undead.cpp  Undead.h
Village/: Village.cpp  Village.h
resources/npcNames/: Default.txt  Elf.txt  Human.txt  Spirit.txt  Undead.txt
src/: GameController.cpp  GameController.h  main.cpp
src/Logger/: Logger.cpp  Logger.h
src/Npc/: EGender.cpp  EGender.h  ELifeState.cpp  ELifeState.h  Npc.cpp  Npc.h
src/Npc/Creator/: NpcCreator.cpp  NpcCreator.h
src/Npc/Races/: ERace.cpp  ERace.h
src/Npc/Races/Elf/: Elf.cpp  Elf.h
src/Npc/Races/Human/: Human.cpp  Human.h
src/Npc/Races/Spirit/: Spirit.cpp  Spirit.h
src/Npc/Races/Undead/: Undead.cpp  Undead.h
src/Npc/Relations/: NpcRelation.h  RaceRelation.h
src/NpcRelation/: NpcRelationComputer.h  NpcRelationSystem.cpp  NpcRelationSystem.h  RaceRelation.h
src/NpcRelation/NpcCouple/: NpcCouple.cpp  NpcCouple.h
src/PlayerActions/: EPlayerActions.cpp  EPlayerActions.h  PlayerAction.cpp  PlayerAction.h
src/Village/: Village.cpp  Village.h
src/utils/: Displayer.cpp  Displayer.h  NpcNameGenerator.cpp  NpcNameGenerator.h  RpgDate.cpp  RpgDate.h  Utils.h  Utils.h.cpp
